--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -43,8 +43,8 @@
 }
 
 .logo{
-  width: 150px;
-  height: 150px;
+  width: 125px;
+  height: 125px;
 }
 
 .startMusicText{
@@ -66,7 +66,7 @@
 .leftPanel{
   float: left;
   width: 10%;
-  margin-top: -10px;
+  margin-top: 30px;
 } 
 
 .rightPanel{
@@ -77,8 +77,8 @@
   text-align: left;
 }
 
-.stopButton{
-  margin-top: 100px;
+.flagButton{
+  margin-top: 55px;
   margin-left: 50%;
   width: 60px;
 }
@@ -87,6 +87,7 @@
   overflow: scroll;
   margin-top: 50px;
   height:250px;
+  width:500px;
 }
 
 .green{
